# Predictive_Maintenance_for_Contractors

./: README.md  VoltaTeam7_Analysis.ipynb  aggresive data.ipynb  agressively_cleaned_critical_analysis_df.csv  business.py  check_intervals.py  coxph_analysis.py  coxph_model.pkl  data_cleaning.py  install_packages.py  kmf_analysis.py  load_files.py  main.py  test_dataset.csv  train_dataset.csv
Predictive_Maintenance_for_Contractors/: LICENSE  Makefile  README.md  pyproject.toml
data/: Adressen BOH Wonen Zuid.xlsx  Data Volta Foutcode omschrijving.xlsx  Data Volta Monteursbezoeken.xlsx  Data Volta toestellen onder contract.xlsx
