[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predictive_maintenance_for_contractors"
version = "0.0.1"
description = "Predictive maintenance for heating system contractor using survival analysis model"
authors = [
  { name = "Minh Pham, Stephen McCarthy, Adam Kielinski, \u0026 Long Le" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["predictive_maintenance_for_contractors"]
force_sort_within_sections = true
